# agentic-dev-and-mcp

./: .gitignore  README.md
llm-reasoning-benchmark/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
llm-reasoning-benchmark/notebooks/: agent_benchmark.ipynb  career_convo_with_eval.ipynb
llm-reasoning-benchmark/notebooks/me/: summary.txt
llm-reasoning-benchmark/src/: __init__.py  benchmark.py  judge.py  models.py  output.py
multi-agent-orchestration/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
multi-agent-orchestration/notebooks/: workflow_prototype.ipynb
multi-agent-orchestration/src/: __init__.py  config.py  output.py  prompts.py  validation.py
multi-agent-orchestration/src/agents/: __init__.py  emailer.py  sales_manager.py  sales_writers.py
multi-agent-orchestration/src/tools/: __init__.py  email.py
multi-agent-orchestration/src/workflow/: __init__.py  sales_campaign.py
professional-profile-agent/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
professional-profile-agent/data/: rl_projects_26h1.md
professional-profile-agent/src/: __init__.py  agent.py  evaluator.py  profile.py  prompts.py  tools.py
